Se eliminaron las carpetas innesecesarias

--- a/html_css/Ejercicio11_19/Ejercicio11-19.html
+++ b/html_css/Ejercicio11_19/Ejercicio11-19.html
@@ -68,7 +68,7 @@
     <!-- Pie de la pagina -->
 
     <footer class="pie">
-        <img src="../Ejercicio5/gato.jpg" alt="gato" class="gato">
+        <img src="gato.jpg" alt="gato" class="gato">
     </footer>
 
 </body>
