--- a/html_css/Ejercicio20/Ejercicio20.html
+++ b/html_css/Ejercicio20/Ejercicio20.html
@@ -50,7 +50,7 @@
     </div>
 
     <footer class="pie">
-        <img src="../Ejercicio5/gato.jpg" alt="gato" class="gato">
+        <img src="gato.jpg" alt="gato" class="gato">
     </footer>
 
 </body>
