--- a/html_css/Ejercicio7/Ejercicio_7.html
+++ b/html_css/Ejercicio7/Ejercicio_7.html
@@ -13,7 +13,7 @@ initial-scale=1.0">
     <ul class="hijo">
         <li class="lista">
             <div class="image1">
-                <img src="1.jpg" alt="Thumbnail" class="img1">
+                <img src="../RESOURCE-1-5/1.jpg" alt="Thumbnail" class="img1">
             </div>
             <div class="texto">
                 <h4 class="negrilla"><b> Linda Hart </b></h4>
@@ -22,7 +22,7 @@ initial-scale=1.0">
         </li>
         <li class="lista">
             <div class="image1">
-                <img src="2.jpg" alt="Thumbnail" class="img1">
+                <img src="../RESOURCE-1-5/2.jpg" alt="Thumbnail" class="img1">
             </div>
             <div class="texto">
                 <h4 class="negrilla"> Roger Medina </h4>
@@ -31,7 +31,7 @@ initial-scale=1.0">
         </li>
         <li class="lista">
             <div class="image1">
-                <img src="1.jpg" alt="Thumbnail" class="img1">
+                <img src="../RESOURCE-1-5/1.jpg" alt="Thumbnail" class="img1">
             </div>
             <div class="texto">
                 <h4 class="negrilla"> Dean Sullivan </h4>
@@ -40,7 +40,7 @@ initial-scale=1.0">
         </li>
         <li class="lista">
             <div class="image1">
-                <img src="2.jpg" alt="Thumbnail" class="img1">
+                <img src="../RESOURCE-1-5/2.jpg" alt="Thumbnail" class="img1">
             </div>
             <div class="texto">
                 <h4 class="negrilla"> Elizabeth Austin </h4>
