--- a/html_css/Ejercicio8/ejercicio_no3.html
+++ b/html_css/Ejercicio8/ejercicio_no3.html
@@ -22,7 +22,7 @@ initial-scale=1.0">
                 <li class="lista">🪪 Contact Me</li>
             </ul>
             <div class="img1">
-                <img src="../RESOURCE-1-5/1.jpg" alt="Profile Photo" class="imagen">
+                <img src="1.jpg" alt="Profile Photo" class="imagen">
                 <h4>Don Bosco</h4>
             </div>
         </div>
