--- a/html_css/Ejercicio9/final.html
+++ b/html_css/Ejercicio9/final.html
@@ -24,7 +24,7 @@
                 <li class="li1">🪪 Contact Me</li>
             </ul>
             <div class="img">
-                <img src="../IMAGES/pexels-photo-14289827.jpeg" alt="Profile Photo" class="imagen">
+                <img src="pexels-photo-14289827.jpeg" alt="Profile Photo" class="imagen">
                 <h4 class="db">Don Bosco</h4>
             </div>
         </div>
