Se actualizaron los ejercicios 21 y 22 de html y css

--- a/html_css/Ejercicio21/responsive.html
+++ b/html_css/Ejercicio21/responsive.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="navegacion">
             <ul class="lista_nav">
-                <li id="logo-gato"><img class="logo_gato" src="logo-gato2.webp" alt="logo"></li>
+                <li><img class="logo_gato" src="logo-gato2.webp" alt="logo"></li>
                 <li id="plural">PLURALSIGHT</li>
                 <li>
                     <select name="products" id="prod">
@@ -33,7 +33,7 @@
                 </li>
             </ul>
             <ul class="lista_nav" id="nav2">
-                <li class="li-lupa"><img class="lupa" src="lupa2.png" alt="lupa"></li>
+                <li><img class="lupa" src="lupa2.png" alt="lupa"></li>
                 <li>
                     <select name="sign" id="sign">
                         <option value="">Sign in</option>
@@ -52,7 +52,7 @@
         <div class="cuadro-fondo">
             <div class="transparente"></div>
             <div class="texto-principal">
-                <h2>Build better teams</h2>
+                <h2 class="titulo">Build better products</h2>
                 <p>Your customers won´t settle and neither should you. With pluralsight, technology teams know more and
                     work
                     better together. Develop the skills you need for your top priorities. improve workflows with
@@ -74,8 +74,8 @@
             <div class="texto">
                 <h3 class="morado">path</h3>
                 <h2 class="texto-cursos">Java Script</h2>
-                <h3 class="no-cursos"><strong>11</strong> Courses</h3>
-                <h3 class="texto-cursos"><strong>Take a look</strong> <strong class="simbolo">></strong></h3>
+                <h3 class="no-cursos"><strong class="negrita">11</strong> Courses</h3>
+                <h3 class="texto-cursos" id="look"><strong>Take a look</strong> <strong class="simbolo">></strong></h3>
             </div>
         </div>
         <div class="lenguaje">
@@ -83,14 +83,19 @@
             <div class="texto">
                 <h3 class="morado">path</h3>
                 <h2 class="texto-cursos">Angular</h2>
-                <h3 class="no-cursos"><strong>14</strong> Courses</h3>
-                <h3 class="texto-cursos"><strong>Take a look</strong> <strong class="simbolo">></strong></h3>
+                <h3 class="no-cursos"><strong class="negrita">14</strong> Courses</h3>
+                <h3 class="texto-cursos" id="look2"><strong>Take a look</strong> <strong class="simbolo">></strong></h3>
             </div>
         </div>
         <div class="lenguaje" id="trending">
+            <h3 id="tech">TRENDING TECHNOLOGIES</h3>
+            <h2 class="texto-cursos2">Popular topics<br/>to learn now</h2>
+        </div>
+        <div class="topics">
             <h3 class="morado">TRENDING TECHNOLOGIES</h3>
-            <h2 class="texto-cursos2">Popular topics<br /> learn now</h2>
-            <h2 class="texto-cursos3">Not sure what technologies to focus on? the Technology index ranks 850+ technologies by their popularity. See what´s topping the charts and get recommended courses to skill up</h2>
+            <h2 class="texto-cursos">Popular topics to learn now</h2>
+            <h3 class="que-aprender">Not sure what technologies to focus on? The tecnology index rank 850+ technologies by their relative popularity. See what´s topping the charts and get recommended courses to skill up.
+            </h3>
         </div>
     </section>
 </body>
