Se agrego el ejercicio 25

--- a/html_css/Ejercicio22/index.html
+++ b/html_css/Ejercicio22/index.html
@@ -41,43 +41,61 @@ https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css
             </ul>
         </div>
 
+
+        <div class="gestion">
+            <div class="fondo-blanco">
+                <div>
+                    <i class="bi bi-luggage"></i>
+                </div>
+                <div>
+                    <h2>Gestiona tu reserva</h2>
+                    <p>Entra con tu usuario para ver información acrualizada y opciones de cambio o cancelación en Mis
+                        Viajes.</p>
+                    <button>Iniciar Sesión</button>
+                </div>
+                <div>
+                    <p>X</p>
+                </div>
+            </div>
+        </div>
+
         <!-- Barra de navegación------------------------------------- -->
         <nav id="barra-nav">
             <ul class="barra-nav">
                 <li class="li-nav">
-                    <div><i class="bi bi-building"></i></div>
+                    <div class="icon-nav"><i class="bi bi-building"></i></div>
                     <div>Alojamientos</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-airplane-engines-fill"></i></div>
+                    <div class="icon-nav"><i class="bi bi-airplane-engines-fill"></i></div>
                     <div>Vuelos</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-box2-fill"></i></div>
+                    <div class="icon-nav"><i class="bi bi-box2-fill"></i></div>
                     <div>Paquetes</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-house"></i></div>
+                    <div class="icon-nav"><i class="bi bi-house"></i></div>
                     <div>Alquileres</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-bicycle"></i></div>
+                    <div class="icon-nav"><i class="bi bi-bicycle"></i></div>
                     <div>Actividades</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-car-front"></i></div>
+                    <div class="icon-nav"><i class="bi bi-car-front"></i></div>
                     <div>Autos</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-person-arms-up"></i></div>
+                    <div class="icon-nav"><i class="bi bi-person-arms-up"></i></div>
                     <div>Disney</div>
                 </li>
                 <li class="li-nav">
-                    <div><i class="bi bi-bandaid-fill"></i></div>
-                        <div>Asistencias</div>
+                    <div class="icon-nav"><i class="bi bi-bandaid-fill"></i></div>
+                    <div>Asistencias</div>
                 </li>
-                <li>
-                    <div><i class="bi bi-bus-front"></i></div>
+                <li class="li-nav">
+                    <div class="icon-nav"><i class="bi bi-bus-front"></i></div>
                     <div>Translados</div>
                 </li>
             </ul>
