--- a/html_css/Ejercicio24/index.html
+++ b/html_css/Ejercicio24/index.html
@@ -10,23 +10,75 @@
 
 <body>
     <main>
-        
-        <div id="front">
-            <div class="columna">
 
+        <div id="carta">
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="circulo.png" alt="circulo"></div>
             </div>
-            <div class="columna">
-
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="cubo.png" alt=""></div>
             </div>
-            <div class="columna">
-
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="ovalo.png" alt="ovalo"></div>
             </div>
-            <div class="columna">
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="triangulo.png" alt="triangulo"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="piramide.png" alt=""></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="prisma.png" alt=""></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="rombo.webp" alt=""></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="cuadrado.png" alt="cuadrado"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="prisma.png" alt="prisma"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="triangulo.png" alt="triangulo"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="piramide.png" alt="piramide"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="ovalo.png" alt="ovalo"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="circulo.png" alt="circulo"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="cuadrado.png" alt=""></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="rombo.webp" alt="rombo"></div>
+            </div>
+            <div class="fila">
+                <div class="front"></div>
+                <div class="back"><img src="cubo.png" alt="cubo"></div>
             </div>
         </div>
-        
-    </main>
 
+    </main>
 </body>
 
 </html>
