--- a/Modulo2/Tailwind/ejercicio3/index.html
+++ b/Modulo2/Tailwind/ejercicio3/index.html
@@ -155,7 +155,8 @@
                 <div class=" w-11/12 sm:w-7/12">
                     <p class="font-bold text-center">NATUS ERROR</p>
                     <P class="font-bold text-4xl text-center">Under omnis iste</P>
-                    <p class="text-center">Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dalore et dolore magnam aliquam quaerat voluptatem.
+                    <p class="text-center">Adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
+                        dalore et dolore magnam aliquam quaerat voluptatem.
                     </p>
                 </div>
 
@@ -188,7 +189,7 @@
                         </div>
                     </div>
 
-                    <div class="flex flex-col gap-x-0 sm:gap-x-3">
+                    <div class="flex flex-col gap-x-0 sm:gap-x-3 justify-center items-center">
                         <img src="imagenes/imac.png" alt="Imac" class="w-48 h-32">
                         <div class="sm:mt-4 flex max-w-xs flex-col text-center gap-y-1 sm:gap-y-3">
                             <div class="leading-6 text-gray-600">Commodo <br>Consequat <br>Duis aute <br>Irure dolor
@@ -202,13 +203,34 @@
             </div>
         </div>
 
-        <div class="py-10 sm:py-20">
-            <div class="mx-auto max-w-6xl px-6 lg:px-8 bg-amber-100 grid grid-cols-3 grid-rows-2">
+        <div class="py-10 sm:py-10 flex flex-col justify-center items-center">
+            <p class="font-semibold text-md">DESERUNT</p>
+            <p class="font-bold text-3xl">Mollit anim</p>
 
-                <div class="w-full h-full row-span-2 col-span-1 bg-purple-500">hola</div>
-                <div class="w-full h-full row-span-1 col-span-1 bg-pink-500"></div>
-                <div class="w-full h-full row-span-1 col-span-1 bg-orange-500"></div>
-                <div class="w-full h-full row-span-1 col-span-2 bg-blue-500"></div>
+            <div
+                class="mt-10 w-full h-96 mx-auto max-w-6xl px-6 lg:px-8 bg-amber-100 grid grid-cols-3 grid-rows-2 gap-3">
+
+                <div class="w-full h-full row-span-2 col-span-1 bg-white flex flex-col justify-center items-center">
+
+                    <div class="w-11/12">
+                        <p class="font-bold text-2xl">Sed ut perspiciatis</p>
+                        <p class="text-md text-gray-500 mt-1">Unde omnis iste natus error</p>
+                        <button type="button" class="w-36 h-9 border-solid border-2 border-purple-600 rounded-xl text-purple-600 mt-5">Shop Now</button>
+                    </div>
+
+                    <div class="w-full h-72 bg-no-repeat bg-bottom justify-start sm:mb-0 sm:bg-bg-left-bottom bg-cover"
+                        style="background-image: url(imagenes/iphonxr.png);">
+                    </div>
+                </div>
+
+                <div class="w-full h-full row-span-1 col-span-1 bg-pink-500"
+                    style="background-image: url(imagenes/iphonxr.png);"></div>
+
+                <div class="w-full h-full row-span-1 col-span-1 bg-orange-500"
+                    style="background-image: url(imagenes/msi.png);"></div>
+
+                <div class="w-full h-full row-span-1 col-span-2 bg-blue-500"
+                    style="background-image: url(imagenes/msi.png);"></div>
 
             </div>
         </div>
